--- a/InitializrSpringbootProject/src/main/resources/static/css/menu.css
+++ b/InitializrSpringbootProject/src/main/resources/static/css/menu.css
@@ -8,7 +8,7 @@ body{
     padding: 90px 20px 0;
 }
 
-.header{
+.headercss{
     
     background-color: #2980B9 ;
     height: 90px;
@@ -18,33 +18,35 @@ body{
     width: 100%;
 }
 
-.nav{
+.navcss{
     
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
 }
 
-.nav-link{
+.nav-linkcss{
     
     color: white;
     text-decoration: none;
 }
 
-.logo{
+.logocss{
     font-size: 30px;
     font-weight: bold;
     padding: 0 40px;
     line-height: 90px;
 }
 
-.nav-menu{
+
+
+.nav-menucss{
     display: flex;
     margin-right: 40px;
     list-style: none;
 }
 
-.nav-menu-item{
+.nav-menu-itemcss{
     font-size: 18px;
     margin: 0 10px;
     line-height: 90px;
@@ -52,12 +54,12 @@ body{
    
 }
 
-.nav-menu-link{
+.nav-menu-linkcss{
     padding: 8px 12px;
     border-radius: 4px;
 }
 
-.nav-menu-link:hover{
+.nav-menu-linkcss :hover{
     background-color: #024070;
     font-size: 20px;
     transition: 0.5s;
