--- a/InitializrSpringbootProject/src/main/resources/templates/ubicaciones/puntosrecarga.html
+++ b/InitializrSpringbootProject/src/main/resources/templates/ubicaciones/puntosrecarga.html
@@ -5,7 +5,7 @@
     <head>
         <title>Tienda de vehículos eléctricos</title>
         <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>  
+         <head th:replace="layout/plantilla :: head">
   
     </head>
     
@@ -13,21 +13,33 @@
     <body>
     
         <header th:replace="layout/plantilla :: header"/>
-        <hr>
-            <h2> Bienvenidos </h2>
+   
+            <h2> [[#{plantilla.saludo}]] </h2>
             <div>
                 <p>En esta página se muestran algunos puntos de recarga para vehículos eléctricos</p>   
             </div>
              <hr>
-                 <section>
-                     <article>
-                         <p class='titulo_punto_recarga'>Parqueo Cínica Bíblica</p>    
-                         <img src="https://photos.plugshare.com/photos/579858.jpg" class="imagen_punto_recarga">
-                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.017127389691!2d-84.08151801743058!3d9.927045462528705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e368160b054f%3A0xfdf9862edebb836d!2sParqueo%20Cl%C3%ADnica%20B%C3%ADblica!5e0!3m2!1ses!2scr!4v1667702345985!5m2!1ses!2scr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe_punto_recarga"></iframe>     
-                         <p class='precio_punto_recarga'>Precio</p>  
-                         <p>Pago requerido 3000 colones por hora de carga más la hora de parqueo cuesta ¢1.300</p>
-                     </article>  
-                 </section>
+             
+                 
+               <div class="container">
+            <h2>[[#{recarga.puntos}]]</h2>              
+            <div class="row row-cols-3">
+                
+                   <div class="card"  >
+                   <h5 class="card-title" >Parqueo Cínica Bíblica</h5>     
+                   <img  width="400" height="300" src="https://photos.plugshare.com/photos/579858.jpg" alt="Card image cap">
+                   <hr>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.017127389691!2d-84.08151801743058!3d9.927045462528705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e368160b054f%3A0xfdf9862edebb836d!2sParqueo%20Cl%C3%ADnica%20B%C3%ADblica!5e0!3m2!1ses!2scr!4v1667702345985!5m2!1ses!2scr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe_punto_recarga"></iframe>    
+                   <div class="card-body">
+                   <p class="card-text">Pago requerido 3000 colones por hora de carga más la hora de parqueo cuesta ¢1.300</p>
+                   <a href="https://www.plugshare.com/location/166467" class="btn btn-primary">[[#{recarga.informacion}]]</a>
+                   </div>
+                   </div>
+                   </div>
+                
+                
+            </div>
+
                     
         <footer th:replace="layout/plantilla :: footer"/> 
         
