--- a/InitializrSpringbootProject/src/main/resources/templates/articulo/modificar.html
+++ b/InitializrSpringbootProject/src/main/resources/templates/articulo/modificar.html
@@ -36,6 +36,10 @@
                 <label for="activo">Activo</label>
                 <input type="checkbox" name="activo" th:field="*{activo}"/>
             </fieldset>
+            <fieldset>
+                <label for="imagen">URL de la imagen del artículo</label>
+                <input type="text" name="imagen" th:field="*{imagen}"/>
+            </fieldset>
       
             <hr/>
             <input type="submit" value="Guardar" name="guardar"/>            
