--- a/InitializrSpringbootProject/src/main/resources/templates/ubicaciones/puntosmantenimiento.html
+++ b/InitializrSpringbootProject/src/main/resources/templates/ubicaciones/puntosmantenimiento.html
@@ -37,12 +37,36 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                    <a href="https://www.tallercalderon.com" class="btn btn-primary">[[#{mantenimiento.informacion}]]</a>
                    </div>
                    </div>
+                
+                   <div class="card"  >
+                   <h5 class="card-title" >Transmisiones automáticas CR</h5>     
+                   <img  width="400" height="300" src="https://transmisionesautomaticas-cr.com/wp-content/uploads/2022/10/5.png" alt="Card image cap">
+                   <hr>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15717.425936713786!2d-84.17998955314438!3d9.987383099999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0fb283275ed0d%3A0x72fde64e430fc30e!2sTransmisiones%20Autom%C3%A1ticas%20CR!5e0!3m2!1ses!2scr!4v1670197691855!5m2!1ses!2scr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                   <div class="card-body">
+                   <p class="card-text">Nunca pares, nunca te conformes, hasta que lo bueno sea mejor y lo mejor excelente.
+                   Somos una empresa familiar con más de 25 años de experiencia.
+                   Preocupados por tu seguridad, contamos con tecnología de punta para el diagnóstico y reparación de tu transmisión automática ¡CALIDAD GARANTIZADA!</p>
+                   <a href="https://transmisionesautomaticas-cr.com" class="btn btn-primary">[[#{mantenimiento.informacion}]]</a>
                    </div>
-            
-            
-            
-            
-            
+                   </div>
+               
+                   
+                   <div class="card"  >
+                   <h5 class="card-title" >J. FEYTH</h5>     
+                   <img  width="400" height="300" src="https://tytenlinea.com/wp-content/uploads/2021/03/Nuevos-servicios-Grupo-Q-800x445.jpg" alt="Card image cap">
+                   <hr>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.040246823429!2d-84.04727004986357!3d9.930606276915675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e38ef0678e9f%3A0xa95a5f520c73e1d1!2sTaller%20J.Feyth%20Enderezado%20y%20Pintura!5e0!3m2!1ses!2scr!4v1670198207286!5m2!1ses!2scr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                   <div class="card-body">
+                   <p class="card-text">Taller de enderezado y pintura Nuestro trabajo habla por nosotros. Buscamos calidad y excelencia en todos nuestros resultados. 
+                   99 años de experiencia e innovación en Enderezado y Pintura
+                   4 Generaciones respaldan nuestro trabajo</p>
+                   <a href="https://www.tallerjfeyth.com" class="btn btn-primary">[[#{mantenimiento.informacion}]]</a>
+                   </div>
+                   </div>
+                
+                
+                   </div>
                </div>
                
                
