--- a/InitializrSpringbootProject/src/main/resources/templates/ubicaciones/puntosrecarga.html
+++ b/InitializrSpringbootProject/src/main/resources/templates/ubicaciones/puntosrecarga.html
@@ -35,9 +35,61 @@
                    <a href="https://www.plugshare.com/location/166467" class="btn btn-primary">[[#{recarga.informacion}]]</a>
                    </div>
                    </div>
+                
+                   <div class="card"  >
+                   <h5 class="card-title" >Mall San Pedro</h5>     
+                   <img  width="400" height="300" src="https://photos.plugshare.com/photos/966790.jpg" alt="Card image cap">
+                   <hr>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.996528323767!2d-84.05874078520635!3d9.934246092896272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e3819e802fbf%3A0xb25a0cb9695c66c6!2sMall%20San%20Pedro%2C%20Rotonda%20de%20la%20Fuente%20de%20La%20Hispanidad%2C%20Alameda%2C%20San%20Jos%C3%A9%2C%20San%20Pedro!5e0!3m2!1ses!2scr!4v1670196351547!5m2!1ses!2scr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+                   <div class="card-body">
+                   <p class="card-text">Ubicado en el parqueo del 3er piso. Pedir al guarda que lo active</p>
+                   <a href="https://www.plugshare.com/location/155835" class="btn btn-primary">[[#{recarga.informacion}]]</a>
+                   </div>
                    </div>
                 
-                
+                  <div class="card"  >
+                   <h5 class="card-title" >Centro Comercial Campo Real- CONCASA</h5>     
+                   <img  width="400" height="300" src="https://photos.plugshare.com/photos/790803.jpg" alt="Card image cap">
+                   <hr>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7859.56046675913!2d-84.24002464609372!3d9.95223450000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0f9efe2c08365%3A0xdb0e50a59e1bce44!2sCentro%20Comercial%20Campo%20Real!5e0!3m2!1ses!2scr!4v1670196581338!5m2!1ses!2scr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+                   <div class="card-body">
+                   <p class="card-text">Centro Comercial Campo Real- CONCASA. Del peaje de San Rafael en Ruta 27, 150m norte y 750m sur.</p>
+                   <a href="https://www.plugshare.com/location/211314" class="btn btn-primary">[[#{recarga.informacion}]]</a>
+                   </div>
+                   </div>
+                   
+                   <div class="card"  >
+                   <h5 class="card-title" >Coopeguanacaste Nicoya</h5>     
+                   <img  width="400" height="300" src="https://photos.plugshare.com/photos/1019634.jpg" alt="Card image cap">
+                   <hr>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.480049908507!2d-85.45678928520464!3d10.141577992754193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f9fb74b099b2923%3A0x4f751f7cb6e4912c!2sCoopeguanacaste%20Sucursal%20Nicoya!5e0!3m2!1ses!2scr!4v1670196763437!5m2!1ses!2scr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+                   <div class="card-body">
+                   <p class="card-text">Pago requerido ₡150 + IVA. Abierta 24 horas </p>
+                   <a href="https://www.plugshare.com/location/152472" class="btn btn-primary">[[#{recarga.informacion}]]</a>
+                   </div>
+                   </div>
+                   
+                   <div class="card"  >
+                   <h5 class="card-title" >Hotel Savegre</h5>     
+                   <img  width="400" height="300" src="https://photos.plugshare.com/photos/987545.jpg" alt="Card image cap">
+                   <hr>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125904.58262845226!2d-83.93930196762084!3d9.550519181260697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa139099d43baf3%3A0x9198ee594b6ccf86!2sHotel%20Savegre!5e0!3m2!1ses!2scr!4v1670197051328!5m2!1ses!2scr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+                   <div class="card-body">
+                   <p class="card-text">Pago requerido 10$ Abierta 24 horas </p>
+                   <a href="https://www.plugshare.com/location/432234" class="btn btn-primary">[[#{recarga.informacion}]]</a>
+                   </div>
+                   </div>
+                   
+                   <div class="card"  >
+                   <h5 class="card-title" >NovaCentro - Banco Promérica</h5>     
+                   <img  width="400" height="300" src="https://photos.plugshare.com/photos/1040042.jpg" alt="Card image cap">
+                   <hr>
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.803832995694!2d-84.05175534986347!3d9.950273376584262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e465466e1e0f%3A0x658ab9fc1fbce4f2!2sSucursal%20Banco%20Promerica%20Novacentro!5e0!3m2!1ses!2scr!4v1670197288139!5m2!1ses!2scr" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+                   <div class="card-body">
+                   <p class="card-text">Solicitar a los guardas del banco o del centro comercial. 7am-10pm </p>
+                   <a href="https://www.plugshare.com/location/386835" class="btn btn-primary">[[#{recarga.informacion}]]</a>
+                   </div>
+                   </div>
             </div>
 
                     
